Bug 251473 - Akonadi server stop prevents quitting Kmail-mobile
Summary: Akonadi server stop prevents quitting Kmail-mobile
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-16 18:17 UTC by Sabine Faure
Modified: 2011-01-14 21:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the new error overlay with Quit button (50.82 KB, image/jpeg)
2010-12-30 11:17 UTC, Tobias Koenig
Details
Unsuccessfull restart of Akonadi server prevent user to quit Kmail-mobile. (35.83 KB, image/png)
2011-01-07 22:57 UTC, Sabine Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-09-16 18:17:09 UTC
Version:           unspecified
OS:                Linux

If for whatever reason akonadi server stops than the user cannot quit Kmail-mobile as there is no quit button accessible and the whole screen becomes black.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Stop akonadi server (from a terminal for example)


Actual Results:  
Kmail-mobile main screen becomes dark and there an error message and a 'Start' button to restart Akonadi server.

There is no quit button and the user cannot minimize the app to close it either.

Expected Results:  
It would be a lot better to have a quit button there or to be at least able to minimize the app to close it if needed in case Akonadi server is completely broken and restarting if not sufficient.

N900, 4:4.5~20100916.1175939-1maemo1.1174921
Comment 1 Tobias Koenig 2010-12-30 11:15:15 UTC
SVN commit 1210266 by tokoe:

Add a 'Quit' button to error overlay

In mobile UI mode there will be a Quit button available
in the error overlay to quit the application. This is
necessary if the server fails to restart and the error overlay
therefor won't vanish.

BUG: 251473


 M  +11 -0     erroroverlay.cpp  
 M  +8 -1      erroroverlay.ui  
 M  +1 -0      erroroverlay_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1210266
Comment 2 Tobias Koenig 2010-12-30 11:17:38 UTC
Created attachment 55372 [details]
Screenshot of the new error overlay with Quit button

Hej Sabine,

the error overlay contains a 'Quit' button now which will close the application.

Ciao,
Tobias
Comment 3 Sabine Faure 2011-01-07 22:55:23 UTC
Hi Tobias!

It is only partly corrected I am afraid.

Here are the different possible cases:

1. Akonadi server stops unexpectingly and the user wishes to quit Kmail-mobile. => She then uses the 'Quit' button that you added.

2. The user clicks on 'Start' button and Akonadi server is relaunched successfully and the user resumes using Kmail-mobile. 
=> She does not need to use the 'Quit' button. 

3. The user clicks on 'Start' button but Akonadi server is not relaunched successfully. Only a 'Details...' button is displayed and the user cannot minimize the application to close it (see attachement enclosed). 
=> The user could really use a 'Quit' button is this last case.

Because of this I am reopening this bug.

Here are more detailed steps to reproduce this bug:
- Launch Kmail-mobile
- Stop akonadi server (from a terminal for example)
- Kmail-mobile main screen becomes dark and there an error message and a 'Start' and 'Quit' button
- Click on the 'Start' button (if Akonadi server restarts properly repeat stopping it and starting it until it does not)
- The main screen becomes dark again with a 'The Akonadi personal information management service is not operational' message and only a 'Details...' button

The user cannot quit Kmail-mobile in that case even by minimizing the application so a 'Quit' button there would be really useful.


N900, 4:4.6~.20110106.1209.gitfde48d5-1maemo1.121147
Comment 4 Sabine Faure 2011-01-07 22:57:35 UTC
Created attachment 55714 [details]
Unsuccessfull restart of Akonadi server prevent user to quit Kmail-mobile.

N900, 4:4.6~.20110106.1209.gitfde48d5-1maemo1.121147
Comment 5 Tobias Koenig 2011-01-10 11:09:18 UTC
SVN commit 1213409 by tokoe:

Add 'Quit' button to details page of error overlay

BUG: 251473


 M  +3 -0      erroroverlay.cpp  
 M  +8 -1      erroroverlay.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1213409
Comment 6 Sabine Faure 2011-01-14 21:30:20 UTC
Hi Tobias!

It is corrected now.

The 'Quit' button is now available under the 'Details...' button and allows the user to quit Kmail-mobile if the restart of Akonadi was unsuccessful.

So I am closing this bug.

N900, 4:4.6~.20110114.0754.git620f98b-1maemo1.121392