Add a 'Quit' button to error overlay

In mobile UI mode there will be a Quit button available
in the error overlay to quit the application. This is
necessary if the server fails to restart and the error overlay
therefor won't vanish.

BUG: 251473

svn path=/trunk/KDE/kdepimlibs/; revision=1210266